#82 Fixed alignment of the logo in relation to other menus.

--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -35,6 +35,14 @@ body {
   margin: 20px 0;
 }
 
+.container .navbar-header .navbar-brand {
+	float: left;
+	padding: 9px;
+	font-size: 18px;
+	line-height: 20px;
+	height: 20px;
+}
+
 #footer > .container {
   padding-left: 15px;
   padding-right: 15px;
